--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
         display: block !important;
         margin: 0 auto !important;
       }
+      div#ficha > div > table > tbody > tr:nth-child(7) > td:nth-child(2) > table  {
+        width: 280px !important;
+      }
+      div#ficha > div > table > tbody > tr:nth-child(7) > td:nth-child(2) > table > tbody {
+        width: 280px !important;
+      }
       div#ficha > div > table > tbody > tr:nth-child(7) > td:nth-child(2) > table > tbody  {
         padding: 0 !important;
       }
@@ -92,7 +98,7 @@
         padding: 0 !important;
       }
       div#ficha > div > table > tbody > tr:nth-child(7) > td:nth-child(2) > table > tbody > tr > td:nth-child(2) > table > tbody {
-        width: 215px !important;
+        width: 210px !important;
         padding: 0 !important;
       }
       div#ficha > div > table > tbody > tr:nth-child(7) > td:nth-child(2) > table > tbody > tr > td:nth-child(2) {
@@ -166,11 +172,13 @@
       }
       tbody tr td:first-child {
         font-weight: bold;
+        font-size: 0.75em !important;
         width: auto !important;
         border: 0 !important;
         background-color: inherit !important;
         box-sizing: border-box !important;
         padding: 2px !important;
+        padding-right: 4px !important;
       }
 
       tbody tr td tbody tr td tbody tr td:last-child {
