gerador de itens

--- a/index.html
+++ b/index.html
@@ -280,11 +280,14 @@
         margin: 0 auto;
         text-align: center;
       }
+
+      div.classes a {
+        color: #fff;
+      }
     </style>
     <link rel="stylesheet" type="text/css" href="css/print.css">
   </head>
   <body>
-
     <header>
       <img src="img/logo.gif" />
       <div id="fb-root"></div>
@@ -293,6 +296,9 @@
     </header>
 
     <div class="classes">
+      Este é um gerador aleatório de personagens de nível 1 para Advanced Dungeons and Dragons 2ª edição. Conheca também o <a href="https://sirlockee.com/aded/aded-itens.html">os loots aleatórios para encontros, tavernas e lojas de armas</a>.
+      <br style="clear: both" />
+      <br style="clear: both" />
       Force a rolagem para um tipo específico de classe:
       <br style="clear: both" />
       <form>
